# StreamQ

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  StreamQ.spec  build.bat  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py
.github/workflows/: windows-build.yml
scripts/: build_exe.bat
src/streamq/: __init__.py  __main__.py  config.py
src/streamq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/streamq/core/: __init__.py  app.py  downloader.py
src/streamq/utils/: __init__.py  ffmpeg.py
