[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamq"
version = "1.0.0"
authors = [
    {name = "ivanerror", email = "contact@example.com"},
]
description = "Queue and download video/audio from YouTube using yt-dlp with a clean GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["youtube", "download", "video", "audio", "yt-dlp", "gui", "tkinter"]
dependencies = [
    "yt-dlp>=2025.09.26",
    "brotli",
    "mutagen",
    "pycryptodomex",
    "websockets",
    "ttkbootstrap>=1.10.1",
]

[project.urls]
Homepage = "https://github.com/ivanerror/streamq"
Repository = "https://github.com/ivanerror/streamq.git"
Issues = "https://github.com/ivanerror/streamq/issues"

[project.scripts]
streamq = "streamq.__main__:main"

[project.gui-scripts]
streamq-gui = "streamq.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
streamq = ["py.typed"]

# Optional development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["streamq"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
